unpackaged/main/default/objects/Account_Group__c/Account_Group__c.object-meta.xml
<CustomObject>
    <description>This object is to assist the reporting of a group of accounts.</description>
    <label>Account Group</label>
    <nameField>
        <label>Account Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>