unpackaged/main/default/objects/Account_Group__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>