unpackaged/main/default/objects/Account_Group__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The end date of the account group</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>