unpackaged/main/default/objects/Account_Group__c/fields/Growth_Target__c.field-meta.xml
<CustomField>
    <fullName>Growth_Target__c</fullName>
    <description>The growth target of the account group</description>
    <label>Growth Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>