unpackaged/main/default/objects/Account_Group__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The start date of the account group</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>