unpackaged/main/default/objects/Account_Group__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>SFSUP-895</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top 10 New (Grow)</fullName>
            </value>
            <value>
                <fullName>Top 10 Existing (Expand)</fullName>
            </value>
            <value>
                <fullName>Top 10 Tail (Lapsed/Reactivate)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>