unpackaged/main/default/objects/Account_Group__c/recordTypes/AU_Account_Group.recordType-meta.xml
<RecordType>
    <fullName>AU_Account_Group</fullName>
    <active>true</active>
    <label>AU Account Group</label>
</RecordType>