unpackaged/main/default/objects/Account_Group__c/recordTypes/NZ_Account_Group.recordType-meta.xml
<RecordType>
    <fullName>NZ_Account_Group</fullName>
    <active>true</active>
    <label>NZ Account Group</label>
</RecordType>